[package]
name = "llm_arena"
version = "0.0.1"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/game.rs"

[dependencies]
elara_engine = { path = "C:/Digital Archive/Game Development/elara/elara_engine/", version = "=2.0.0" }
elara_render_opengl = { path = "C:/Digital Archive/Game Development/elara/elara_render_opengl/", version = "=1.0.0" }

kalosm = { version = "0.4.0", features = ["full", "openai"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }

[dependencies.serde]
version = "1.0.163"

[dev-dependencies]
rand = "0.9.0"
