[package]
name = "llm_arena_runner_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
elara_engine = { path = "C:/Digital Archive/Game Development/elara/elara_engine/", version = "=2.0.0" }
elara_render_opengl = { path = "C:/Digital Archive/Game Development/elara/elara_render_opengl/", version = "=1.0.0" }
elara_platform_web = { path = "C:/Digital Archive/Game Development/elara/elara_platform_web/", version = "=1.0.0" }
llm_arena = { path = "../llm_arena" }

serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.50"

[dependencies.web-sys]
version = "0.3.70"
features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "WebGlBuffer",
  "WebGlVertexArrayObject",
  "WebGl2RenderingContext",
  "WebGlProgram",
  "WebGlBuffer",
  "WebGlShader",
  "WebGlFramebuffer",
  "WebGlRenderbuffer",
  "KeyboardEvent",
  "ClipboardEvent",
  "DataTransfer",
  "MouseEvent",
  "BeforeUnloadEvent",
  "WebGlUniformLocation",
  "Window",
  "console",
  "WebGlTexture",
  "Performance", 
  "PerformanceTiming",
  "WebGlContextAttributes",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode", 
  "Response",
  "Crypto",
  "Storage",
  "IdbRequest",
  "IdbDatabase",
  "Location",
  "WheelEvent",
]
